using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

namespace strazProject.Interfaces
{
    public interface IIncidentCreationBehaviour
    {
        public IIncident CreateIncident();
    }
}
